--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -2,17 +2,13 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
-    <title>Hello WebSocket</title>
+    <title>客服反馈中心</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/fb/main.css" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="/fb/app.js"></script>
-
-    <style>
-
-    </style>
 </head>
 <body>
 
