--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -4,11 +4,11 @@
 <head>
     <title>客服反馈中心</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/fb/main.csscss" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/fb/app.js.js"></script>
+    <link href="main.css" rel="stylesheet">
+    <script src="app.js"></script>
 </head>
 <body>
 
