--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -3,10 +3,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
     <title>客服反馈中心</title>
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
-    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <link href="sc/bootstrap.min.css" rel="stylesheet">
+    <script src="sc/jquery.min.js"></script>
+    <script src="sc/sockjs.min.js"></script>
+    <script src="sc/stomp.min.js"></script>
     <link href="main.css" rel="stylesheet">
     <script src="app.js"></script>
 </head>
